@@ -1,14 +1,14 @@
 Description: Use system NSPR prtime
 Author: Kevin Kofler
-Origin: Fedora, http://pkgs.fedoraproject.org/cgit/rpms/qt5-qtwebengine.git/tree/qtwebengine-opensource-src-5.9.0-system-nspr-prtime.patch?id=f6784380ac380455d2c88b78543c5a4c2c5d0578
+Origin: Fedora, https://src.fedoraproject.org/rpms/qt5-qtwebengine/blob/master/f/qtwebengine-everywhere-src-5.10.0-system-nspr-prtime.patch
 Forwarded: not-needed
 Reviewed-by: Sandro Knauß <hefee@debian.org>
-Last-Update: 2017-06-29
+Last-Update: 2018-03-04
 ---
 This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 --- a/src/3rdparty/chromium/base/BUILD.gn
 +++ b/src/3rdparty/chromium/base/BUILD.gn
-@@ -49,6 +49,9 @@ config("base_flags") {
+@@ -53,6 +53,9 @@ config("base_flags") {
        "-Wno-char-subscripts",
      ]
    }
@@ -18,15 +18,15 @@ This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
  }
  
  config("base_implementation") {
-@@ -837,8 +840,6 @@ component("base") {
+@@ -858,8 +861,6 @@ component("base") {
      "third_party/dmg_fp/g_fmt.cc",
      "third_party/icu/icu_utf.cc",
      "third_party/icu/icu_utf.h",
 -    "third_party/nspr/prtime.cc",
 -    "third_party/nspr/prtime.h",
      "third_party/superfasthash/superfasthash.c",
-     "threading/non_thread_safe.h",
-     "threading/non_thread_safe_impl.cc",
+     "third_party/valgrind/memcheck.h",
+     "threading/platform_thread.h",
 --- a/src/3rdparty/chromium/base/time/pr_time_unittest.cc
 +++ b/src/3rdparty/chromium/base/time/pr_time_unittest.cc
 @@ -7,7 +7,7 @@
@@ -51,27 +51,27 @@ This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
  namespace base {
 --- a/src/3rdparty/chromium/tools/gn/bootstrap/bootstrap.py
 +++ b/src/3rdparty/chromium/tools/gn/bootstrap/bootstrap.py
-@@ -473,7 +473,6 @@ def write_gn_ninja(path, root_gen_dir, o
+@@ -527,7 +527,6 @@ def write_gn_ninja(path, root_gen_dir, o
        'base/third_party/dmg_fp/dtoa_wrapper.cc',
        'base/third_party/dmg_fp/g_fmt.cc',
        'base/third_party/icu/icu_utf.cc',
 -      'base/third_party/nspr/prtime.cc',
-       'base/threading/non_thread_safe_impl.cc',
        'base/threading/post_task_and_reply_impl.cc',
+       'base/threading/sequence_local_storage_map.cc',
        'base/threading/sequenced_task_runner_handle.cc',
-@@ -575,7 +574,7 @@ def write_gn_ninja(path, root_gen_dir, o
-     }
- 
-   if is_linux:
--    libs.extend(['-lrt'])
-+    libs.extend(['-lrt', '-lnspr4'])
-     ldflags.extend(['-pthread'])
- 
-     static_libraries['xdg_user_dirs'] = {
+@@ -680,7 +679,7 @@ def write_gn_ninja(path, root_gen_dir, o
+         'base/allocator/allocator_shim.cc',
+         'base/allocator/allocator_shim_default_dispatch_to_glibc.cc',
+       ])
+-      libs.extend(['-lrt'])
++      libs.extend(['-lrt', '-lnspr4'])
+       static_libraries['libevent']['include_dirs'].extend([
+           os.path.join(SRC_ROOT, 'base', 'third_party', 'libevent', 'linux')
+       ])
 --- a/src/3rdparty/chromium/tools/gn/BUILD.gn
 +++ b/src/3rdparty/chromium/tools/gn/BUILD.gn
-@@ -274,6 +274,10 @@ executable("gn") {
-     "//build/config/sanitizers:deps",
+@@ -275,6 +275,10 @@ executable("gn") {
+     "//build/config:exe_and_shlib_deps",
      "//build/win:default_exe_manifest",
    ]
 +
